<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        tools:context=".medicine.AddMedicineActivity">

    <EditText
            android:id="@+id/et_medicine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/medicine_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fill_form"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_medicine_name"/>

    <TextView
            android:id="@+id/tv_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_date"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/outline_insert_invitation_white_18dp"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
            android:id="@+id/tv_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/set_time"
            android:drawableStart="@drawable/outline_watch_later_white_18dp"
            android:drawablePadding="8dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_set_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:paddingStart="26dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="@+id/tv_set_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_date"/>

    <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:paddingStart="26dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="@+id/tv_set_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_time"/>

    <Switch
            android:id="@+id/alarm_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/alarm"
            android:drawableStart="@drawable/outline_alarm_white_18dp"
            android:drawablePadding="8dp"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_time"/>

    <EditText
            android:id="@+id/et_repetation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/default_repetation"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/repetation"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>